--- a/pages/about.html
+++ b/pages/about.html
@@ -33,98 +33,6 @@
   </head>
 
   <body>
-    <!-- <nav
-      class="bg-transparent px-4 "
-      id="navbar"
-    >
-      <div class="max-w-1/2 md:max-w-1/3"></div>
-      <div
-        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
-      >
-        <a href="./about.html" class="link">About</a>
-        <a href="#" class="link">Community</a>
-        <a href="./contact.html" class="link">Contact</a>
-        <a href="./faq.html" class="link">FAQ</a>
-      </div>
-
-     
-
-      <button
-        id="menu-btn"
-        class="block hamburger md:hidden focus:outline-none"
-      >
-        <span class="hamburger-top"></span>
-        <span class="hamburger-middle"></span>
-        <span class="hamburger-bottom"></span>
-      </button>
-      <div class="md:hidden">
-        <div
-          id="menu"
-          class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md"
-        >
-          <a href="#">Pricing</a>
-          <a href="#">Product</a>
-          <a href="#">About Us</a>
-          <a href="#">Careers</a>
-          <a href="#">Community</a>
-        </div>
-      </div>
-    </nav> -->
-
-    <!-- <nav class="bg-white fixed top-0 left-0 right-0 mx-auto px-6 py-4">
-      <div class="flex items-center justify-between">
-        <div class="pt-2 md:max-w-1/3">
-          <a href="../index.html">
-            <h1 class="font-title pl-8 text-4xl text-black font-normal">
-              SEEDSNITCH
-            </h1>
-          </a>
-        </div>
-        <div class="hidden space-x-14 md:pl-20 md:flex font-[600] md:max-w-1/3">
-          <a href="#" class="link">About</a>
-          <a href="#" class="link">Community</a>
-          <a href="./contact.html" class="link">Contact Us</a>
-          <a href="./faq.html" class="link">FAQ</a>
-        </div>
-        <div
-          class="md:max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
-        >
-          <a
-            href="./apply.html"
-            class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
-          >
-            Apply
-          </a>
-          <a
-            class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
-            href="./ambassador.html"
-          >
-            Become an ambassador
-          </a>
-        </div>
-        <button
-          id="menu-btn"
-          class="block hamburger md:hidden focus:outline-none"
-        >
-          <span class="hamburger-top"></span>
-          <span class="hamburger-middle"></span>
-          <span class="hamburger-bottom"></span>
-        </button>
-      </div>
-
-      <div class="md:hidden">
-        <div
-          id="menu"
-          class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md"
-        >
-          <a href="#">Pricing</a>
-          <a href="#">Product</a>
-          <a href="#">About Us</a>
-          <a href="#">Careers</a>
-          <a href="#">Community</a>
-        </div>
-      </div>
-    </nav> -->
     <nav
       class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue"
       id="navbar"
@@ -193,6 +101,24 @@
     </nav>
 
     <section
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
+    >
+      <div
+        class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
+      >
+        <div class="w-full md:w-[800px] text-center p-4 md:p-2">
+          <h2
+            class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-black"
+          >
+            Get to know <span class="text-accent"> about us</span>
+          </h2>
+          <h2 class="font-light text-2xl md:font-normal text-[#242424]">
+            Discover the passion and purpose behind our mission
+          </h2>
+        </div>
+      </div>
+    </section>
+    <!-- <section
       class="w-full mx-auto flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8 md:w-full"
     >
       <div
@@ -224,11 +150,45 @@
     </section>
     <div class="w-full mx-auto flex flex-col items-center justify-center">
       <hr class="h-px w-2/3 mt-10 bg-[#242424] border-0" />
-    </div>
+    </div> -->
 
+    <section>
+      <div
+        class="py-4 text-center mx-auto flex flex-col items-center justify-start"
+      >
+        <div class="w-full p-4 flex flex-row justify-between items-center my-4">
+          <div class="hidden md:flex flex-row justify-center w-1/2">
+            <img src="../img/about.jpg" class="w-[600px] object-right" alt="" />
+          </div>
+          <div
+            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3"
+          >
+            <h1
+              class="md:font-black font-bold text-[40px] md:text-5xl pb-2 text-accent text-center w-full"
+            >
+              What is seedsnitch?
+            </h1>
+            <img
+              src="../img/about.jpg"
+              class="block w-[300px] md:hidden"
+              alt=""
+            />
+            <p class="text-center text-[20px] font-normal w-full">
+              Seedsnitch is a platform dedicated to helping college students
+              transform their ideas into successful ventures. Being aware of the
+              unique challenges that a student might come across while starting
+              up, we are here to bridge the gap through guidance and Communitys
+              essential to overcome them. We are a Community with a stern belief
+              that when entrepreneurs come together sharing their share of
+              experiences and support, great things happen.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="service" class="mb-12 mx-auto">
       <div
-        class="mx-auto text-center text-4xl md:text-5xl font-bold text-[#242424] mb-8"
+        class="mx-auto text-center text-[40px] md:text-5xl font-bold text-[#242424] mb-8"
       >
         <span class="text-accent"> Why</span> Choose Us?
       </div>
