--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -100,10 +100,8 @@
     </nav>
 
     <section
-      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
     >
-      <!-- #ffdad1-->
-
       <div
         class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
       >
@@ -111,11 +109,9 @@
           <h2
             class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
-            <!-- text-[#f57456] -->
             <span class="text-[#242424]"> Become an </span>ambassador
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
-            <!--text-[#242424]-->
             Join the Seedsnitch Ambassador Program and assist your
             peers in transforming ideas into startups
             while also earning incentives for each referral.
@@ -123,10 +119,9 @@
         </div>
       </div>
     </section>
-
     <section>
       <div
-        class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start"
+        class="py-4 text-center mx-auto flex flex-col items-center justify-start"
       >
         <div
           class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-4"
@@ -139,10 +134,10 @@
             />
           </div>
           <div
-            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-12 space-y-3"
+            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3"
           >
             <h1
-              class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
+              class="md:font-black font-bold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
             >
               What is it about?
             </h1>
@@ -169,10 +164,10 @@
             <img src="../img/img2.jpg" class="w-[600px] object-right" alt="" />
           </div>
           <div
-            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-12 space-y-3"
+            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3"
           >
             <h1
-              class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
+              class="md:font-black font-bold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
             >
               How does this work?
             </h1>
@@ -205,9 +200,13 @@
           <span class="text-[#242424]"> Join our&nbsp;</span>Mission
         </h2>
         <div
-          class="w-full md:w-[600px] h-full rounded-md mx-auto form border-t border-t-gray-100 px-4"
+          class="w-full md:w-[600px] h-full rounded-md mx-auto border-t border-t-gray-100 px-4"
         >
-          <form class="w-full h-full max-w-2xl px-4 py-6" name="ambassador">
+          <form
+            class="w-full h-full max-w-2xl px-4 py-6"
+            id="ambassador"
+            name="ambassador"
+          >
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full px-3">
                 <label
